# webcam

./: .gitignore  Cargo.toml  README.md
data/: README.md
src/: cuda.rs  lib.rs  main.rs  video.rs
src/video/: capture.rs  face_detect.rs  grayscale.rs
