[package]
name = "webcam"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache 2.0"
repository = "https://github.com/victor-iyi/webcam"
homepage = "https://github.com/victor-iyi/webcam"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.61.2"
